Closed Bug 105268 Opened 23 years ago Closed 23 years ago

in standards mode, background color overwrites form elements in cells with rowspan, rows with bgcolor

Categories

(Core :: Layout: Tables, defect)

x86
All
defect
Not set
major

Tracking

()

RESOLVED FIXED
mozilla0.9.6

People

(Reporter: vdvo, Assigned: karnaze)

References

Details

(Whiteboard: PATCH CANDIDATE_094)

Attachments

(4 files)

From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:0.9.5) Gecko/20011012
BuildID:    2001101202

In standards mode only: in a table where rows have bgcolor, a multi-row cell
renders incorrectly: form elements which happen to be placed in the second or
greater row are partially overwritten with the background color (e.g. you see
the text on the button, but not the button itself; or you see the tick in a
checkbox, but not the box). The table border is also partially visible where
with rowspan=2 it shouldn't be.

Reproducible: Always
Steps to Reproduce: Open HTML below.

Actual Results:  See description.

Expected Results:  Try the HTML without the DOCTYPE (in quirks mode).

<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
"http://www.w3.org/TR/html4/loose.dtd">
<html><head><title>Demo of form rendering bug</title></head>
<body bgcolor="white">
<table border=1>
  <tr bgcolor="gray">
    <td rowspan=2>
      <input type=submit value=button><p>
      <input type=submit value=button>
    <td>
      some text row 1
  <tr bgcolor="gray">
    <td>
      some text row 2<p>line 2 of row 2
</table>
</body>
</html>

another example with checkboxes:

<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
"http://www.w3.org/TR/html4/loose.dtd">
<html><head><title>Demo of form rendering bug</title></head>
<body bgcolor="white">
<table border=1>
  <tr bgcolor="gray">
    <td rowspan=2>
      <input type=checkbox name=a><p>
      <input type=checkbox name=b checked>
    <td>
      some text row 1
  <tr bgcolor="gray">
    <td>
      some text row 2<p>line 2 of row 2
</table>
</body>
</html>
I'm seeing this as well on current linux trunk
Severity: normal → major
Status: UNCONFIRMED → NEW
Ever confirmed: true
Is this a consequence from the checkin for bug 68998?
I checked 0.9.2 and it is there too, but a little bit different: while in 0.9.5,
a form element that is on the border of the two rows is rendered OK (see the
screenshot), in 0.9.2 the bottom part (that which falls into the second row's
space) is incorrect.
Status: NEW → ASSIGNED
OS: Linux → All
Whiteboard: PATCH
Target Milestone: --- → mozilla0.9.6
Comment on attachment 54512 [details] [diff] [review]
patch to fix the bug

sr=attinasi, r=alexsavulov
Attachment #54512 - Flags: superreview+
Attachment #54512 - Flags: review+
*** Bug 106024 has been marked as a duplicate of this bug. ***
The patch is in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: PATCH → PATCH CANDIDATE_094
*** Bug 106227 has been marked as a duplicate of this bug. ***
*** Bug 106061 has been marked as a duplicate of this bug. ***
*** Bug 105404 has been marked as a duplicate of this bug. ***
*** Bug 105403 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: